[gd_scene load_steps=10 format=2]

[ext_resource path="res://img/bart.png" type="Texture" id=1]
[ext_resource path="res://scripts/perseguidor.gd" type="Script" id=2]
[ext_resource path="res://som/bart perseguidor.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 27.1724, 35.6473 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 33.6819, 36.8716 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 22.3421, 0.589329 )

[sub_resource type="Animation" id=4]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 40, 193, 50, 56 ), Rect2( 93, 193, 51, 55 ), Rect2( 147, 194, 53, 54 ), Rect2( 210, 196, 54, 53 ), Rect2( 275, 193, 53, 55 ), Rect2( 346, 193, 53, 56 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "morto"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Rect2( 699, 177, 51, 61 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "parado"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 547, 252, 37, 58 ), Rect2( 591, 252, 37, 58 ), Rect2( 635, 252, 37, 58 ), Rect2( 591, 252, 37, 58 ) ]
}

[node name="NodePerseguidor" type="Node2D"]

[node name="Perseguidor" type="KinematicBody2D" parent="."]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Perseguidor"]
position = Vector2( -0.675781, -0.680374 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 40, 193, 50, 56 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Perseguidor"]
position = Vector2( -5.92337, 1.39373 )
shape = SubResource( 1 )

[node name="area_dano" type="Area2D" parent="Perseguidor"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Perseguidor/area_dano"]
position = Vector2( -5.07382, 1.15823 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="Perseguidor"]
wait_time = 2.0
one_shot = true

[node name="area_morte" type="Area2D" parent="Perseguidor"]
position = Vector2( -4.18271, -43.2666 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Perseguidor/area_morte"]
position = Vector2( -1.2575, 1.2575 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Perseguidor"]
autoplay = "andando"
anims/andando = SubResource( 4 )
anims/morto = SubResource( 5 )
anims/parado = SubResource( 6 )

[node name="bart_perseguidor" type="AudioStreamPlayer2D" parent="Perseguidor"]
stream = ExtResource( 3 )
volume_db = -10.272
[connection signal="body_entered" from="Perseguidor/area_dano" to="Perseguidor" method="_on_area_dano_body_entered"]
[connection signal="timeout" from="Perseguidor/Timer" to="Perseguidor" method="_on_Timer_timeout"]
[connection signal="body_entered" from="Perseguidor/area_morte" to="Perseguidor" method="_on_area_morte_body_entered"]
